--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.8.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^7.4.0",
     "shadcn-ui": "^0.9.5",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
