--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "egylist": "^1.0.3",
     "firebase": "^11.8.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.482.0",
