feat: Update environment configuration for Firebase and chat service, enhance logging, and improve notification handling

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,13 @@
-VITE_BASE_URL=http://localhost:5121/api
-VITE_CHAT_URL=http://localhost:3000/api/v1
+VITE_BASE_URL=http://31.97.154.184:5000/api
+# VITE_CHAT_URL=http://localhost:3000/api/v1
+VITE_CHAT_URL=http://31.97.154.184:3000/api/v1
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=AIzaSyCg44e8uy9kcrWX6GnZWn90o5RKZTf3_5E
+VITE_FIREBASE_AUTH_DOMAIN=pushnotifications-42121.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=pushnotifications-42121
+VITE_FIREBASE_STORAGE_BUCKET=pushnotifications-42121.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=631086307984
+VITE_FIREBASE_APP_ID=1:631086307984:web:75928ffde1415884b25615
+
+VITE_ENV=production
