--- a/Frontend/.env
+++ b/Frontend/.env
@@ -11,3 +11,6 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=631086307984
 VITE_FIREBASE_APP_ID=1:631086307984:web:75928ffde1415884b25615
 
 VITE_ENV=production
+
+
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyDNREHpTGIUl5Ss7Lg-qpOPur8wB2fAnfQ
