--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
