feat: update API endpoints for base URL and chat services; enhance profile navigation and rental request handling; improve UI elements across various components

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,7 +1,7 @@
-VITE_BASE_URL=http://31.97.154.184:5000/api
+VITE_BASE_URL=https://api.semsary.site/api
 # VITE_CHAT_URL=http://localhost:3000/api/v1
-VITE_CHAT_URL=http://31.97.154.184:3000/api/v1
-VITE_CHAT_URL_SOCKET=http://31.97.154.184:3000
+VITE_CHAT_URL=https://chat.semsary.site/api/v1
+VITE_CHAT_URL_SOCKET=https://chat.semsary.site
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=AIzaSyCg44e8uy9kcrWX6GnZWn90o5RKZTf3_5E
